[project]
name = "harassmentcommentsanalyzecodegroup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.15"
dependencies = [
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pymysql>=1.1.3",
    "questionary>=2.1.1",
    "requests>=2.33.1",
]
